# cuda-mpi-llama-scheduler

./: .gitignore  CHANGELOG.md  CMakeLists.txt  QUICKSTART.md  README.md
Others/: notes.txt
docs/: ARCHITECTURE.md  GPU_USAGE_GUIDE.md  LOG_ANALYSIS.md  PROJECT_STATUS.md  README.md
include/mls/: cuda_post.cuh  http.hpp  llama_api.hpp  llama_parse.hpp  stats.hpp
scripts/: build.sh  run_2ranks.sh  sweep_inflight.sh
src/: cuda_post.cu  http.cpp  llama_api.cpp  llama_parse.cpp  main.cu  stats.cpp
